--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
 			<button>Login</button>
 		</div>
 		<div>
-			<button>Sign Up</button>
+			<button onclick="/signUp">Sign Up</button>
 		</div>
 		<div>
 			<button>View Flights</button>
