--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -5,6 +5,8 @@
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
 		<link rel='stylesheet' type='text/css' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css'>
 		<link rel='stylesheet' type='text/css' href='css/app.css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
   <style>
     body{
