--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,9 @@
 			<button>Login</button>
 		</div>
 		<div>
-			<button onclick="/signUp">Sign Up</button>
+      <form action="/signup">
+        <button class="btn btn-success">Sign Up</button>
+      </form>
 		</div>
 		<div>
 			<button>View Flights</button>
