--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,15 +13,19 @@
 			Welcome
 		</div>
 		<div>
-			<button>Login</button>
-		</div>
-		<div>
-      <form action="/signup">
-        <button class="btn btn-success">Sign Up</button>
+      <form action="/login">
+        <button class="btn btn-dark">Login</button>
       </form>
 		</div>
 		<div>
-			<button>View Flights</button>
+      <form action="/signup">
+        <button class="btn btn-dark">Sign Up</button>
+      </form>
+		</div>
+		<div>
+      <form action="/flightspage">
+        <button class="btn btn-dark">Flights</button>
+      </form>
 		</div>
 	</div>
   <!-- </div> -->
