--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,9 @@
 <%- include ('templates/header'); -%>
 <h1 style='text-align: center'> Welcome to A.D.J. Airlines</h1>
+
+<form class="" action="" method="post">
+</form>
+
 <div class='container'>
   <div class='container0' id='invisible'>
 		container0
@@ -7,6 +11,8 @@
   <div class='container0' id='invisible'>
     Container 1
   </div>
+
+
   <!-- <div class='flex-container'> -->
   <div class='container0' id='index3'>
 		<div>
