--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -1,7 +1,16 @@
 <%- include ('templates/header'); -%>
 
 <div class='container'>
-    Hello
+  <div class='jumbotron'>
+		<h3> User Registration </h3>
+    <form action="/signup" method="POST">
+       Username: <input type="text" name="username" placeholder="Username">
+       <br><br>
+       Password: <input type="text" name="password" placeholder="Password">
+       <br><br>
+       <button class="btn btn-primary" name="createAccount">Create Account</button>
+    </form>
+	</div>
 </div>
 
 <%- include ('templates/footer'); -%>
