--- a/views/planFlight.ejs
+++ b/views/planFlight.ejs
@@ -30,7 +30,9 @@
 
 <div class="container text-center">
   <div class="jumbotron">
+    <form action="index.html" method="post">
 
+    </form>
   </div>
 
 </div>
