Final Push From Me
This is the final push from me for a while, everything now works but it isn't pretty. Flights' table still needs some more flights but that's easy. Just use the register function to slam them in. It doesn't look pretty, but it should pass all test cases and requirements for this project. It isn't very safe though.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,12 +19,20 @@
        <li class="nav-item"> <!--nav-item active highlights it-->
           <a class="nav-link" href="/login">Login</a>
        </li>
+       <li class="nav-item"> <!--nav-item active highlights it-->
+          <a class="nav-link" href="/logout">Logout</a>
+       </li>
         <li class="nav-item">
           <a class="nav-link" href="/register">Register</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/planFlight">Plan A Flight</a>
         </li>
+        <% if(isLoggedIn){%>
+          <li class="nav-item">
+            <a class="nav-link" href="/userflights">My Flights</a>
+          </li>
+        <%}%>
       </ul>
   </div>
 </nav>
