--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -49,10 +49,10 @@
     <!-- Sticky not working -->
     <div style='position: sticky'>
         <ul>
-          <li class="active"><a href="home">Home</a></li>
-          <li class="active"><a href="flightspage">Flights</a></li>
-          <li class="active"><a href="signUp">Sign Up</a></li>
-          <li class="active"><a href="login">Login</a></li>
-          <li style="float:left" class="navbar-brand"><a href="about">A.D.J. Airlines</a></li>
+          <li class="active"><a href="/">Home</a></li>
+          <li class="active"><a href="/planFlight">Flights</a></li>
+          <li class="active"><a href="/register">Sign Up</a></li>
+          <li class="active"><a href="/login">Login</a></li>
+          <li style="float:left" class="navbar-brand"><a href="#">A.D.J. Airlines</a></li>
         </ul>
     </div>
