Ultimate Final Push
Got the weather page working and displaying accurate weather data based on lon and lat! Too bad it's not that accurate since it's reliant on converting city names to lat lon using the airports table soooo oof

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,7 +40,7 @@
 
   <div class='container text-center'>
   	<div class='jumbotron'>
-  		<h2> Search Skimpy Airlines Database for locations! </h2>
+  		<h2> Search Skimpy Airlines Database For Locations! </h2>
 
   		<form action="/citysearch">
   			      Search For Cities With This Airport: <input type="text" name="airport" id="airport" placeholder="Airport Name">
