--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,5 +1,36 @@
 <%- include ('templates/header'); -%>
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+  <!-- Brand -->
+  <a class="navbar-brand" href="/home">Skimpy Airlines</a>
 
+  <!-- Toggler/collapsibe Button -->
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <!-- Navbar links -->
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+       <li class="nav-item"> <!--nav-item active highlights it-->
+          <a class="nav-link" href="/login">Login</a>
+       </li>
+       <li class="nav-item"> <!--nav-item active highlights it-->
+          <a class="nav-link" href="/logout">Logout</a>
+       </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/register">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/planFlight">Plan A Flight</a>
+        </li>
+        <% if(isLoggedIn){%>
+          <li class="nav-item">
+            <a class="nav-link" href="/userflights">My Flights</a>
+          </li>
+        <%}%>
+      </ul>
+  </div>
+</nav>
 <h1 style='color: red;'> Sorry, Page not found !</h1>
 
 <%- include ('templates/footer'); -%>
