--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
   <!-- Brand -->
-  <a class="navbar-brand" href="/home">Skimpy Airlines</a>
+  <strong> <a class="navbar-brand" href="/home">Welcome Skimpy Airlines</a> </strong>
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -39,10 +39,10 @@
 
 
   <div class='container text-center'>
-  	<div class='jumbotron'>
-  		<h2> Search Skimpy Airlines Database For Locations! </h2>
-
-  		<form action="/citysearch">
+  	 <div class='jumbotron'>
+  		<h2> Airflight Inquiries! </h2>
+      
+  	  <form action="/citysearch">	
   			      Search For Cities With This Airport: <input type="text" name="airport" id="airport" placeholder="Airport Name">
           		<button class="btn btn-success">Search</button>
   			<br><br>
@@ -61,5 +61,7 @@
 
         </div>
   	</div>
+  	</div>
+  	
 
 <%- include ('templates/footer'); -%>
