--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,8 +1,15 @@
 <div class = 'footer'>
-          <hr>
-          <center>
-          <h6> CST336 Final Project</h6>
-          </center>
-      </div>
-      </body>
+              <hr> <!-- defines a thematic change in content -->
+             CST336 Internet Programming Final. 2020&copy <br/>
+             <strong>Disclaimer:</strong> The information is be fictitious and 
+          It is used for academic purpposes only.
+           <div>
+              <img src="image/csumb.png" alt="Logo of CSUMB"/>
+      
+          </div>
+    </footer>
+
+        
+    </body>
+    <!-- closing body -->
 </html>
