--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,9 @@
 body{
-  background-image: url('image/airplane.jpg');
+  
+  background-image: url('image/airplane5.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 h1{
@@ -64,3 +68,45 @@ h1{
 .rightHolder{
   width: 300px;
 }
+.jumbotron{
+    
+  opacity: 0.7;
+  background-position: center;
+  border-radius: 25px;
+  border: 2px solid #A9A9A9;
+  padding: 20px;
+  width:700px;
+  height: 400px;
+
+  
+}
+
+.footer{
+
+  padding: 100px;
+
+  padding-bottom:2px;
+
+  font-size: 1em;
+
+  text-decoration: center;
+
+  color:white
+  
+   
+
+}
+.header, .footer {
+
+  text-align: center;
+
+}
+.btn-primary {
+    color: white;
+    background-color: gray;
+    border-color: #007bff;
+}
+h3{
+  text-align: center; 
+}
+ 
