--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
   <!-- Brand -->
-  <a class="navbar-brand" href="/home">Skimpy Airlines</a>
+  <a class="navbar-brand" href="/home">Welocome Skimpy Airlines</a>
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -29,14 +29,7 @@
 <div class='container'>
 	<div class='jumbotron'>
 		<h3> User Login </h3>
-		<a class='btn btn-primary' href='/'>Home</a>
-	</div>
-
-    <%if(typeof error != 'undefined' && error){%>
-        <h6 style='color: red;'> Incorrect login credentials! </h6>
-	<%}%>
-
-	<form action='/login' method='POST'>
+			<form action='/login' method='POST'>
 		<div class='form-group row'>
 			<label for='username' class='col-sm-4 col-form-label'>Username</label>
 			<div class='col-sm-4'>
@@ -57,6 +50,14 @@
 			<div class='col-sm-4'></div>
 		</div>
 	</form>
+		
+	</div>
+
+    <%if(typeof error != 'undefined' && error){%>
+        <h6 style='color: red;'> Incorrect login credentials! </h6>
+	<%}%>
+
+
 </div>
 
-<%- include ('templates/header'); -%>
+<%- include ('templates/footer'); -%>
