--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -4,55 +4,23 @@
     <title>A.D.J. Airlines</title>
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
 		<link rel='stylesheet' type='text/css' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css'>
-		<link rel='stylesheet' type='text/css' href='css/app.css'>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js" ></script>
+ 
   </head>
-  <style>
-    body{
-      background-image: url('image/airplane5.jpg');
-    }
-    ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      /* background-color: #4C4646; */
-    }
-
-    li {
-      float: right;
-    }
-
-    li:last-child {
-      border-right: none;
-    }
-
-    li a {
-      display: block;
-      color: white;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-    }
-
-    li a:hover:not(.active) {
-      background-color: #111;
-    }
-
-    .active {
-      background-color: #34727E;
-    }
-  </style>
+          <style>
+  
+            @import url("/css/styles.css");
+            
+            body{
+  
+              background-image: url('image/airplane5.jpg');
+              background-repeat: no-repeat;
+              background-position: center;
+              background-size: cover;
+}
+        </style>
   <body>
-    <!-- Sticky not working -->
-    <div style='position: sticky'>
-        <ul>
-          <li class="active"><a href="/">Home</a></li>
-          <li class="active"><a href="/planFlight">Flights</a></li>
-          <li class="active"><a href="/register">Sign Up</a></li>
-          <li class="active"><a href="/login">Login</a></li>
-          <li style="float:left" class="navbar-brand"><a href="#">A.D.J. Airlines</a></li>
-        </ul>
-    </div>
+   
