--- a/views/error.ejs
+++ b/views/error.ejs
@@ -22,6 +22,11 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/planFlight">Plan A Flight</a>
+           <% if(isLoggedIn){%>		
+           <li class="nav-item">		
+             <a class="nav-link" href="/userflights">My Flights</a>		
+           </li>		
+         <%}%>
         </li>
       </ul>
   </div>
