--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -8,19 +8,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js" ></script>
+     <style>
+  
+            @import url("css/styles.css");
+          
+           </style>
  
   </head>
-          <style>
-  
-            @import url("/css/styles.css");
-            
-            body{
-  
-              background-image: url('image/airplane5.jpg');
-              background-repeat: no-repeat;
-              background-position: center;
-              background-size: cover;
-}
-        </style>
+          
   <body>
    
