--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 body{
-  
-  background-image: url('image/airplane5.jpg');
+  background-image: url("/image/airplane5.jpg");
+ 
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -109,4 +109,3 @@ h1{
 h3{
   text-align: center; 
 }
- 
