--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>A.D.J. Airlines</title>
+    <title>Skimpy Airlines</title>
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
 		<link rel='stylesheet' type='text/css' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css'>
 
@@ -9,12 +9,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js" ></script>
      <style>
-  
+
             @import url("css/styles.css");
-          
+
            </style>
- 
+
   </head>
-          
+
   <body>
-   
