Changed "flights" to "planFlight"
In all navbar routes

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,11 +15,14 @@
        <li class="nav-item active"> <!--nav-item active highlights it-->
           <a class="nav-link" href="/login">Login</a>
        </li>
+       <li class="nav-item"> <!--nav-item active highlights it-->
+          <a class="nav-link" href="/logout">Logout</a>
+       </li>
         <li class="nav-item">
           <a class="nav-link" href="/register">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/flights">Plan A Flight</a>
+          <a class="nav-link" href="/planFlight">Plan A Flight</a>
         </li>
       </ul>
   </div>
