--- a/views/userflights.ejs
+++ b/views/userflights.ejs
@@ -22,7 +22,7 @@
           <a class="nav-link" href="/register">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/flights">Plan A Flight</a>
+          <a class="nav-link" href="/planFlight">Plan A Flight</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="/userflights">My Flights</a>
@@ -55,6 +55,6 @@
           </tr>
         </div>
      <%});%>
-     </div> 
+     </div>
      </div>
 <%- include ('templates/footer'); -%>
