Final frontend fixes

--- a/views/weathersearch.ejs
+++ b/views/weathersearch.ejs
@@ -28,8 +28,8 @@
   </div>
 </nav>
 
-  <div class='container text-center'>
-  	<div class='jumbotron bg-info'>
+  <div class='weatherContainer'>
+  	<div id='insideWeather'>
 
       <button type="button" class="btn btn-secondary" name="showAjax" id="showAjax">Show Weather for <%=cityName%></button>
 
@@ -78,6 +78,6 @@
         </script>
 
   	</div>
-    </div>
+  </div>
 
 <%- include ('templates/footer'); -%>
