--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -155,7 +155,6 @@ p{
 }
 
 .jumbotron{
-  opacity: 0.7;
   background-position: center;
   border-radius: 25px;
   border: 2px solid #A9A9A9;
@@ -183,6 +182,14 @@ p{
     border-color: #007bff;
 }
 
-#notexistant{
-  
+.weatherContainer{
+  text-align: center;
+  justify-content: space-around;
+  display: flex;
+}
+
+#insideWeather{
+  background-color: #00BFFF;
+  border-radius: 5px;
+  margin-top: 15px;
 }
